rem: overflow bug

--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 .navbar-title {
     font-size:18px;
     color:#626161;
+    
 
 }
 
@@ -26,10 +27,10 @@ body,html {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     color: #a09e9c;
-    overflow-x: hidden;
+    
     
 }
-.container-fluid { padding: 0;}
+
 .pri-yellow {
     color:var(--pri-yellow);
 }
